apps/envoy-gateway/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-gateway-lb
  namespace: envoy-gateway-system
spec:
  selector:
    matchLabels:
      app: envoy-gateway
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
